--- a/sigi/app/Resources/views/application/new.html.twig
+++ b/sigi/app/Resources/views/application/new.html.twig
@@ -4,9 +4,9 @@
     <h2>Resumen Aplicación a Oportunidad de Investigación</h2>
 
     <label>Alumno:</label> 
-    <input type="email" class="form-control" value="{{ students_name}}" readonly="true">
+    <input type="email" class="form-control" value="{{ students_name}}" disabled="true">
     <label>Oportunidad:</label> 
-    <input type="email" class="form-control" value="{{ oportunity_name}}" readonly="true">
+    <input type="email" class="form-control" value="{{ oportunity_name}}" disabled="true">
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
