hay un error en applicationtype porque no me acepta el student con entityType, revisar que pasa, push del dia

--- a/sigi/app/Resources/views/application/show.html.twig
+++ b/sigi/app/Resources/views/application/show.html.twig
@@ -28,59 +28,78 @@
         </tbody>
     </table>
 
-            <a href="{{ path('application_index') }}" class="btn btn-info btn1" role="button" >Mis Aplicaciones</a>
-            {% if (application.state == 1 and is_mentor_owner) %}
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary btn2" data-toggle="modal" data-target="#MentorAgreeModal">Aceptar Postulante</button>
-            {% endif %}
+    <a href="{{ path('application_index') }}" class="btn btn-info btn1" role="button" >Mis Aplicaciones</a>
+    {% if (application.state == 1 and is_mentor_owner) %}
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary btn2" data-toggle="modal" data-target="#MentorAgreeModal">Aceptar Postulante</button>
+    {% endif %}
 
-            {% if (application.state == 2 and is_student_owner) %}
-                <a href="{{ path('application_edit', { 'id': application.id }) }}" class="btn btn-primary btn2" role="button" >Aceptar Postulación</a>
-            {% endif %}
+    {% if (application.state == 2 and is_student_owner) %}
+        <button type="button" class="btn btn-primary btn2" data-toggle="modal" data-target="#StudentAgreeModal">Aceptar Postulación</button>
+        <button type="button" class="btn btn-danger btn3" data-toggle="modal" data-target="#DeleteModal">Cancelar Postulación</button>
+    {% endif %}
+    
 
+    <!-- Modal -->
+    <div class="modal fade" id="DeleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Aceptar Postulante</h4>
+          </div>
+          <div class="modal-body">
+            Esta acción no tiene vuelta atrás, si elimina la aplicación el profesor no podrá verla y el proceso será interrumpido
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">No, quiero mas tiempo</button>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Eliminar" class="btn btn-danger btn3" role="button">
+                <input type="submit" value="Si, deseo cancelarla" class="btn btn-danger" role="button">
             {{ form_end(delete_form) }}
-
-
-<!-- Modal -->
-<div class="modal fade" id="MentorAgreeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Aceptar Postulante</h4>
-      </div>
-      <div class="modal-body">
-        Esta acción no tiene vuelta atrás, una vez aceptado el postulante, este deberá aceptar la postulación también, tras lo cual los datos serán enviados al DARA quedando un regristro permanente
-        ¿Esta seguro que quiere continuar?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">No, quiero mas tiempo</button>
-        <a href="{{ path('application_accept_by_mentor', { 'id': application.id}) }}" class="btn btn-primary" role="button" >Sí, acepto a este postulante</a>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<!-- Modal -->
-<div class="modal fade" id="MentorAgreeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Aceptar Postulante</h4>
-      </div>
-      <div class="modal-body">
-        Esta acción no tiene vuelta atrás, una vez aceptada la postulación, los datos serán enviados al DARA quedando un regristro permanente
-        ¿Esta seguro que quiere continuar?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">No, quiero más tiempo</button>
-        <a href="{{ path('application_accept_by_mentor', { 'id': application.id}) }}" class="btn btn-primary" role="button" >Sí, entiendo y acepto</a>
+
+    <!-- Modal -->
+    <div class="modal fade" id="MentorAgreeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Aceptar Postulante</h4>
+          </div>
+          <div class="modal-body">
+            Esta acción no tiene vuelta atrás, una vez aceptado el postulante, este deberá aceptar la postulación también, tras lo cual los datos serán enviados al DARA quedando un regristro permanente
+            ¿Esta seguro que quiere continuar?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">No, quiero mas tiempo</button>
+            <a href="{{ path('application_accept_by_mentor', { 'id': application.id}) }}" class="btn btn-primary" role="button" >Sí, acepto a este postulante</a>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="StudentAgreeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Aceptar Postulante</h4>
+          </div>
+          <div class="modal-body">
+            Esta acción no tiene vuelta atrás, una vez aceptada la postulación, los datos serán enviados al DARA quedando un regristro permanente
+            ¿Esta seguro que quiere continuar?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">No, quiero más tiempo</button>
+            <a href="{{ path('application_accept_by_student', { 'id': application.id}) }}" class="btn btn-primary" role="button" >Sí, entiendo y acepto</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
 {% endblock %}
