--- a/sigi/app/Resources/views/application/index.html.twig
+++ b/sigi/app/Resources/views/application/index.html.twig
@@ -7,6 +7,13 @@
         <thead>
             <tr>
                 <th>Id</th>
+                <th>Oportunidad</th>
+                {% if is_granted(['ROLE_MENTOR']) %}
+                    <th>Alumno</th>
+                {% endif %}
+                {% if is_granted([  'ROLE_STUDENT']) %}
+                    <th>Mentor</th>
+                {% endif %}
                 <th>Estado</th>
                 <th>Fecha de aplicación</th>
                 <th>Última Actualización</th>
@@ -17,6 +24,21 @@
         {% for application in applications %}
             <tr>
                 <td><a href="{{ path('application_show', { 'id': application.id }) }}">{{ application.id }}</a></td>
+                <td>{{ application.oportunityResearch.getName() }}</td>
+                {% if is_granted(['ROLE_MENTOR']) %}
+                    <td>{{ application.student.getNameText() }}</td>
+                {% endif %}
+                {% if is_granted(['ROLE_STUDENT']) %}
+                    <td>
+                        <ul>
+                            {% for mentorName in application.oportunityResearch.getMentorsName() %}
+                                <li>
+                                    {{ mentorName }}
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                {% endif %}
                 <td>{{ application.getStateText() }}</td>
                 <td>{% if application.applicationDate %}{{ application.applicationDate|date('d/M/y') }}{% endif %}</td>
                 <td>{% if application.lastUpdateDate %}{{ application.lastUpdateDate|date('d/M/y H:i:s') }}{% endif %}</td>
