--- a/sigi/app/Resources/views/application/show.html.twig
+++ b/sigi/app/Resources/views/application/show.html.twig
@@ -52,10 +52,8 @@
             Esta acción no tiene vuelta atrás, si elimina la aplicación el alumno no podrá verla y el proceso será interrumpido
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn2" data-dismiss="modal">No, quiero mas tiempo</button>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Si, deseo cancelarla" class="btn btn-danger btn3" role="button">
-            {{ form_end(delete_form) }}
+            <button type="button" class="btn btn-default " data-dismiss="modal">No, quiero mas tiempo</button>
+            <a href="{{ path('application_not_selected_by_mentor', { 'id': application.id}) }}" class="btn btn-primary" role="button" >Entiendo, no acepto a este postulante</a>
           </div>
         </div>
       </div>
@@ -70,13 +68,11 @@
             <h4 class="modal-title" id="myModalLabel">Aceptar Postulante</h4>
           </div>
           <div class="modal-body">
-            Esta acción no tiene vuelta atrás, si elimina la aplicación el profesor no podrá verla y el proceso será interrumpido
+            Esta acción no tiene vuelta atrás, si elimina la aplicación el profesor no podrá verla y el proceso será interrumpido. ¿Desea continuar?
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn2" data-dismiss="modal">No, quiero mas tiempo</button>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Si, deseo cancelarla" class="btn btn-danger btn3" role="button">
-            {{ form_end(delete_form) }}
+            <button type="button" class="btn btn-default " data-dismiss="modal">No, quiero mas tiempo</button>
+            <a href="{{ path('application_not_accept_by_student', { 'id': application.id}) }}" class="btn btn-primary" role="button" >Entiendo, no rechazo la postulación</a>
           </div>
         </div>
       </div>
