--- a/sigi/app/Resources/views/notification/show.html.twig
+++ b/sigi/app/Resources/views/notification/show.html.twig
@@ -3,11 +3,15 @@
 {% block body %}
     <h1>Notificación {{ notification.id }}</h1>
 
-    <table>
+    <table class="table">
         <tbody>
             <tr>
                 <th>De: </th>
-                <td>{{ notification.sender.username }}</td>
+                {% if notification.systemMessage %}
+                    <td>Mensaje del systema</td>
+                {% else %}
+                    <td>{{ notification.sender.username }}</td>
+                {% endif %}
             </tr>
             <tr>
                 <th>Para: </th>
@@ -15,7 +19,11 @@
             </tr>
             <tr>
                 <th>Mensaje: </th>
-                <td>{{ notification.message }}</td>
+                {% if notification.systemMessage %}
+                    <td>{{ (notification.message | replace ({'@<': reply_ini,'>@': reply_end}) ) | raw}}</td>
+                {% else %}
+                    <td>{{ notification.message }}</td>
+                {% endif %}
             </tr>
             <tr>
                 <th>Enviado el:&nbsp;&nbsp; </th>
@@ -24,6 +32,15 @@
             </tr>
         </tbody>
     </table>
+
+    {% if not notification.systemMessage %}
+        {% if current_id != notification.sender.id %}
+            <form action="{{ path('notification_new') }}" method="post" target="_blank">
+                <input type="hidden" name="recieverId" value="{{ notification.sender.id }}">
+                <input type="submit" value="Responder" class="btn btn-primary btn1">
+            </form>
+        {% endif %}
+    {% endif %}
 
             <a href="{{ path('notification_index') }}" class="btn btn-info btn1" role="button" >Listar Notificaciones</a>
             {{ form_start(delete_form) }}
