--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -35,7 +35,12 @@
                     
                     {% if is_granted(['ROLE_MENTOR','ROLE_STUDENT','ROLE_OTHER']) %}
                       <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Notificaciones <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        Notificaciones 
+                        {% if app.user.hasUnreadNotifications %}
+                          <span aria-hidden="true" style="color:yellow;">({{app.user.howManyUnreadNotifications}})</span> <!--Rocio escogio el color amarillo -->
+                        {% endif %}
+                         <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                           <li><a href="{{path('notification_new')}}">Enviar Nueva</a></li>
                           <li><a href="{{path('notification_index')}}">Ver Listado</a></li>
