--- a/sigi/app/Resources/views/notification/index.html.twig
+++ b/sigi/app/Resources/views/notification/index.html.twig
@@ -66,7 +66,7 @@
                         <td>{% if notification.readed %}Si{% else %}No{% endif %}</td>
                         <td>{{ notification.reciever.username }}</td>
                         <td>
-                            <a href="{{ path('notification_show', { 'id': notification.id }) }}" class="btn {% if notification.readed %}btn-info{% else %}btn-danger{% endif %} btn-sm" role="button">Ver</a>
+                            <a href="{{ path('notification_show', { 'id': notification.id }) }}" class="btn btn-info btn-sm" role="button">Ver</a>
                         </td>
                     </tr>
                 {% endfor %}
