--- a/sigi/app/Resources/views/department/show.html.twig
+++ b/sigi/app/Resources/views/department/show.html.twig
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <th>Facultad:&nbsp;&nbsp;</th>
-                <td>{{ department.faculty }}</td>
+                <td>{{ department.faculty.name }}</td>
             </tr>
         </tbody>
     </table>
