--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -91,7 +91,7 @@
                     </li>
                     {% endif %}
 
-                    {% if is_granted(['ROLE_MENTOR','ROLE_STUDENT']) %}
+                    {% if is_granted('ROLE_MENTOR') %}
                       <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Departamentos <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -101,7 +101,21 @@
                           <li><a href="{{path('department_index')}}">Ver Listado</a></li>
                         </ul>
                       </li>
+                    {% endif %}
 
+                    {% if is_granted('ROLE_MENTOR') %}
+                      <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Facultades <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          {% if is_granted('ROLE_ADMIN') %}
+                            <li><a href="{{path('faculty_new')}}">Crear Nuevo</a></li>
+                          {% endif %}
+                          <li><a href="{{path('faculty_index')}}">Ver Listado</a></li>
+                        </ul>
+                      </li>
+                    {% endif %}
+
+                      {% if is_granted(['ROLE_MENTOR', 'ROLE_STUDENT']) %}
                       <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Investigación <span class="caret"></span></a>
                         <ul class="dropdown-menu">
