--- a/sigi/app/Resources/views/faculty/new.html.twig
+++ b/sigi/app/Resources/views/faculty/new.html.twig
@@ -1,16 +1,53 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/css/select2.min.css" rel="stylesheet" />
+{% endblock %}
+
+
 {% block body %}
-    <h1>Faculty creation</h1>
+    <h1>Nueva Facultad</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" class="btn btn-primary btn1" value="Crear" />
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('faculty_index') }}">Back to the list</a>
-        </li>
-    </ul>
+    <a href="{{ path('faculty_index') }}" class="btn btn-info btn2" role="button" >Ver Facultades</a>
+
+
+
+
+<script type="text/javascript">
+
+window.onload = function() {
+	
+	$.fn.select2.defaults.defaults['language'].inputTooLong = function(){
+  		return 'Input demasiado largo.';
+	};
+
+
+ 	$(".js-tokenizer").select2({
+	  	tags: true,
+	  	tokenSeparators: [','],
+	  	maximumInputLength: 30,
+	  	casesensitive: false,
+	})
+
+   var x = document.getElementsByClassName("select2-container");
+   x[0].style.width = "100%";
+};
+
+</script>
+
+
+{% endblock %}
+
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/js/select2.min.js"></script>
+        
 {% endblock %}
