se agrega el depto a las vistas de usuario mentor y a la oportunidad de investigacion, falta clonarlo a la investigacion, esta funcionando

--- a/sigi/app/Resources/views/oportunityresearch/new.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/new.html.twig
@@ -68,13 +68,15 @@
 <script type="text/javascript">
 
 window.onload = function() {
-
-
+	
+	$(".js-basic-single").select2({
+ 		placeholder: "Seleccione el departamento",
+  		allowClear: false
+ 	})
 	
 	$.fn.select2.defaults.defaults['language'].inputTooLong = function(){
   		return 'Input demasiado largo.';
 	};
-
 
  	$(".js-example-tokenizer").select2({
   	tags: true,
@@ -94,9 +96,14 @@ window.onload = function() {
         return {id: term.toUpperCase(), text: term.toUpperCase()};
       }
 })
+
+ 
+
    var x = document.getElementsByClassName("select2-container");
    x[0].style.width = "100%";
    x[1].style.width = "100%";
+   x[2].style.width = "100%";
+   x[2].style.marginBottom= "20px";
 
 	$('#secondary_mentor_secondaryMentor').on('change', function() {
 		var ter = document.getElementById("thertiary_mentor_thertiaryMentor");
